samples/_failures_safe/1761346706_4a02fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36229aff.c: In function ‘main’:
./samples/SAFE/__tmp_36229aff.c:138:5: error: expected expression at end of input
  138 |     if (
      |     ^~
./samples/SAFE/__tmp_36229aff.c:138:5: error: expected declaration or statement at end of input
